<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryVibrant"
    android:orientation="vertical"
    android:gravity="bottom">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uni"
        android:text="@string/uni"
        android:textSize="14sp"
        android:gravity="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:text="@string/name"
        android:textSize="25sp"
        android:gravity="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bannerid"
        android:text="@string/bannerid"
        android:textSize="20sp"
        android:gravity="center" />

</LinearLayout>