<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_register"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="20"/>


    <EditText
        android:id="@+id/email_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/textbox_corner"
        android:hint="@string/email_reg"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/textbox_corner"
        android:hint="@string/password_reg"
        android:inputType="textPassword"
        android:padding="10dp" />

    <EditText
        android:id="@+id/confirmpassword_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/textbox_corner"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/loginregister_corner"
        android:text="@string/register_btn"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/signin_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/register_txt"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:shadowColor="@android:color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="20"
        />

</LinearLayout>