<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:background="@drawable/backgroundlight">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/back_btn"
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:background="@drawable/button_corner"
                android:drawableTop="@drawable/back" />

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_below="@id/back_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp" />
            <Button
                android:id="@+id/uploadVidBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/videoView"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_corner"
                android:text="@string/upload_vid_btn"
                android:textSize="15sp"/>
            <EditText
                android:id="@+id/editDesc"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_below="@id/uploadVidBtn"
                android:layout_margin="5dp"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:hint="@string/enter_description"
                android:lineHeight="7sp"
                android:gravity="top"/>

            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_below="@id/editDesc"
                android:layout_margin="5dp"
                android:background="@android:color/darker_gray"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:id="@+id/uploadImgBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/uploadImage"
                android:layout_marginTop="5dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_corner"
                android:text="@string/upload_image_btn"
                android:textSize="15sp"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uploadImgBtn"
                android:layout_marginBottom="16dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/post_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/uploadImgBtn"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_corner"
                android:text="@string/post_btn"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        android:layout_gravity="end"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/toolbar_header_layout"
        />

</androidx.drawerlayout.widget.DrawerLayout>